[gd_scene load_steps=25 format=2]

[ext_resource path="res://EuBraBo/assets/HUD/StatsBars/HealthBar/HealthBarUnder.png" type="Texture" id=1]
[ext_resource path="res://EuBraBo/scrips/hud.gd" type="Script" id=2]
[ext_resource path="res://EuBraBo/assets/HUD/StatsBars/HealthBar/HealthBarProgress.png" type="Texture" id=3]
[ext_resource path="res://EuBraBo/assets/HUD/StatsBars/HealthBar/HealthIcon.png" type="Texture" id=4]
[ext_resource path="res://EuBraBo/assets/HUD/StatsBars/HungerBar/HungerIcon.png" type="Texture" id=5]
[ext_resource path="res://EuBraBo/assets/HUD/StatsBars/HungerBar/HungerBarUnder.png" type="Texture" id=6]
[ext_resource path="res://EuBraBo/assets/HUD/StatsBars/HungerBar/HungerBarProgress.png" type="Texture" id=7]
[ext_resource path="res://EuBraBo/assets/HUD/StatsBars/OverBarBase.png" type="Texture" id=8]
[ext_resource path="res://EuBraBo/assets/HUD/StatsBars/WaterBar/WaterBarUnder.png" type="Texture" id=9]
[ext_resource path="res://EuBraBo/assets/HUD/StatsBars/WaterBar/WaterIcon.png" type="Texture" id=10]
[ext_resource path="res://EuBraBo/assets/HUD/StatsBars/WaterBar/WaterBarProgress.png" type="Texture" id=11]
[ext_resource path="res://EuBraBo/assets/HUD/StatsBars/StaminaBar/StaminaBarProgress.png" type="Texture" id=12]
[ext_resource path="res://EuBraBo/assets/HUD/StatsBars/StaminaBar/StaminaBarUnder.png" type="Texture" id=13]
[ext_resource path="res://EuBraBo/assets/HUD/StatsBars/StaminaBar/StaminaIcon.png" type="Texture" id=14]
[ext_resource path="res://EuBraBo/assets/HUD/moeda_10.png" type="Texture" id=15]
[ext_resource path="res://EuBraBo/assets/Minecraft.ttf" type="DynamicFontData" id=16]
[ext_resource path="res://EuBraBo/assets/pause_menu_tema.tres" type="Theme" id=17]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 15 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 15 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 15 )
region = Rect2( 0, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 15 )
region = Rect2( 16, 16, 16, 16 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "MOEDA",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 16 )

[sub_resource type="DynamicFont" id=7]
outline_color = Color( 0.901961, 0.827451, 0.827451, 1 )
extra_spacing_char = 1
font_data = ExtResource( 16 )

[node name="hud" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="health_bar" type="TextureProgress" parent="."]
margin_left = 7.0
margin_right = 97.0
margin_bottom = 9.0
value = 100.0
texture_under = ExtResource( 1 )
texture_over = ExtResource( 8 )
texture_progress = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="health_bar"]
position = Vector2( -4, 4 )
scale = Vector2( 0.590909, 0.6 )
texture = ExtResource( 4 )

[node name="hunger_bar" type="TextureProgress" parent="."]
margin_left = 7.0
margin_top = 12.0
margin_right = 67.0
margin_bottom = 52.0
value = 100.0
texture_under = ExtResource( 6 )
texture_over = ExtResource( 8 )
texture_progress = ExtResource( 7 )

[node name="Sprite" type="Sprite" parent="hunger_bar"]
position = Vector2( -4, 4 )
scale = Vector2( 0.45, 0.522727 )
texture = ExtResource( 5 )

[node name="Timer" type="Timer" parent="hunger_bar"]
wait_time = 14.0
autostart = true

[node name="water_bar" type="TextureProgress" parent="."]
margin_left = 8.0
margin_top = 23.0
margin_right = 68.0
margin_bottom = 32.0
value = 100.0
texture_under = ExtResource( 9 )
texture_over = ExtResource( 8 )
texture_progress = ExtResource( 11 )

[node name="Sprite" type="Sprite" parent="water_bar"]
position = Vector2( -5, 4 )
scale = Vector2( 0.638889, 0.5 )
texture = ExtResource( 10 )

[node name="Timer" type="Timer" parent="water_bar"]
wait_time = 14.0
autostart = true

[node name="stamina_bar" type="TextureProgress" parent="."]
margin_left = 8.0
margin_top = 36.0
margin_right = 68.0
margin_bottom = 76.0
value = 100.0
texture_under = ExtResource( 13 )
texture_over = ExtResource( 8 )
texture_progress = ExtResource( 12 )

[node name="Sprite" type="Sprite" parent="stamina_bar"]
position = Vector2( -5, 5 )
scale = Vector2( 0.611111, 0.583333 )
texture = ExtResource( 14 )

[node name="AnimatedSpriteMoeda" type="AnimatedSprite" parent="."]
position = Vector2( 379, 8 )
scale = Vector2( 1.36718, 1.32031 )
frames = SubResource( 5 )
animation = "MOEDA"
frame = 3
playing = true

[node name="LabelMoeda" type="Label" parent="AnimatedSpriteMoeda"]
anchor_left = -0.27
anchor_top = 1.331
anchor_right = -0.27
anchor_bottom = 1.331
margin_left = -12.503
margin_top = -25.8404
margin_right = -3.50301
margin_bottom = -9.84039
theme = ExtResource( 17 )
custom_fonts/font = SubResource( 6 )
text = "0"

[node name="ondas" type="Label" parent="."]
margin_left = 119.0
margin_top = 1.0
margin_right = 276.0
margin_bottom = 17.0
theme = ExtResource( 17 )
custom_fonts/font = SubResource( 7 )

[connection signal="timeout" from="hunger_bar/Timer" to="." method="re_fome"]
[connection signal="timeout" from="water_bar/Timer" to="." method="water_bar"]
